<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">
    
     <TextView android:id="@+id/txtOutput"
         android:layout_width="fill_parent"
         android:layout_columnSpan="4"
         android:layout_gravity="fill"
         android:gravity="right"
	     android:text="Welcome"/>
   
    <Button android:id="@+id/btnLBracket"
        android:text="@string/left_bracket"
        android:layout_column="0"/>
    <Button android:id="@+id/btnRBracket" 
        android:text="@string/right_bracket"/>
    <Button android:id="@+id/btnPercent"
        android:text="@string/percent"/>  
    <Button android:id="@+id/btnDel"
        android:text="@string/delete"/>
    <Button android:id="@+id/btn7"
        android:text="@string/num7"/>
    <Button android:id="@+id/btn8"
        android:text="@string/num8"/>
    <Button android:id="@+id/btn9"
        android:text="@string/num9"/>
    <Button android:id="@+id/btnDivide"
        android:text="@string/divide"/>
    <Button android:id="@+id/btn4"
        android:text="@string/num4"/>
    <Button android:id="@+id/btn5"
        android:text="@string/num5"/>
    <Button android:id="@+id/btn6"
        android:text="@string/num6"/>
    <Button android:id="@+id/btnMultiply"
        android:text="@string/multiply"/>
    <Button android:id="@+id/btn1"
        android:text="@string/num1"/>
    <Button android:id="@+id/btn2"
        android:text="@string/num2"/>
    <Button android:id="@+id/btn3"
        android:text="@string/num3"/>
    <Button android:id="@+id/btnSubtract"
        android:text="@string/subtract"/>    
    <Button android:id="@+id/btn0"
        android:text="@string/num0"/>
    <Button android:id="@+id/btnDecimal"
        android:text="@string/decimal"/>
    <Button android:id="@+id/btnEqual"
        android:text="@string/equal"/>
    <Button android:id="@+id/btnAdd"
        android:text="@string/add"/>

</GridLayout>
